--- a/index.html
+++ b/index.html
@@ -1,18 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
-    <title>Pagina principal</title>
+    <title>El blog del Narco</title>
 </head>
+
 <body>
-    
+    <header>
+        <div id="subheader">
+            <div id="logotipo">
+                <p><a href="#">Mascotitas</a></p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="#">Inicio</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contacto</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+
 
 
 
 
 
 </body>
+
 </html>
