Mejora para la pagina principal

--- a/index.html
+++ b/index.html
@@ -26,10 +26,40 @@
         </div>
     </header>
 
+    <section id="wrap">
+        <section id="main">
+            <section id="bienvenidos">
+                <article>
+                        <h1>¡Bienvenidos a mascotitas!</h1>
+                        <br>
+                        <h2>La Pagina web de nuestro proyecto de Programación web 1.</h2>
+                        <br>
+                        <h3>Esta pagina web va dedicada a nuestras mascotas queridas y esta conformada por los integrantes:</h3>
+                        <br>
+                            <p>
+                                <ul>
+                                    <li>Ian Imanol Uribe Montoya</li>
+
+                                    <li>Iván Alexander Ramirez Martinez</li>
+
+                                    <li>Victor del Angel Sánchez Sánchez</li>
+
+                                    <li>Luis Enrique Espitia Naves</li>
+
+                                    <li>Ana</li>
+                                </ul>
+                            
+                            </p>
+                </article>
+        </section>
+            
 
 
 
 
+
+        </section>
+    </section>
 
 </body>
 
