--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/estilos.css">
+    <link rel="shortcut icon" href="media/icon/Guellita Rosa.jpg">
     <title>El blog del Narco</title>
 </head>
 
@@ -30,29 +31,81 @@
         <section id="main">
             <section id="bienvenidos">
                 <article>
-                        <h1>¡Bienvenidos a mascotitas!</h1>
-                        <br>
-                        <h2>La Pagina web de nuestro proyecto de Programación web 1.</h2>
-                        <br>
-                        <h3>Esta pagina web va dedicada a nuestras mascotas queridas y esta conformada por los integrantes:</h3>
-                        <br>
-                            <p>
-                                <ul>
-                                    <li>Ian Imanol Uribe Montoya</li>
+                    <h1>¡Bienvenidos a mascotitas!</h1>
+                    <br>
+                    <h2>La Pagina web de nuestro proyecto de Programación web 1.</h2>
+                    <br>
+                    <h3>Esta pagina web va dedicada a nuestras mascotas queridas y la cual esta conformada por los
+                        integrantes:</h3>
+                    <br>
+                    <p>
+                    <ul>
+                        <li>Ian Imanol Uribe Montoya</li>
 
-                                    <li>Iván Alexander Ramirez Martinez</li>
+                        <li>Iván Alexander Ramirez Martinez</li>
 
-                                    <li>Victor del Angel Sánchez Sánchez</li>
+                        <li>Victor del Angel Sánchez Sánchez</li>
 
-                                    <li>Luis Enrique Espitia Naves</li>
+                        <li>Luis Enrique Espitia Naves</li>
 
-                                    <li>Ana</li>
-                                </ul>
-                            
-                            </p>
+                        <li>Ana Karen Reyes Cicilia</li>
+                    </ul>
+                    </p>
                 </article>
-        </section>
-            
+            </section>
+
+            <section id="contenido">
+                <article>
+                    <hgroup>
+                        <h2 class="titulo">Mascotita de Iván</h2>
+                    </hgroup>
+                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
+                    <p class="fecha">Edad: 25</p>
+                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
+                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
+                        adipisci error odio voluptate?</p>
+
+                </article>
+                <article>
+                    <hgroup>
+                        <h2 class="titulo">Mascotita de Victor</h2>
+                    </hgroup>
+                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
+                    <p class="fecha">Edad: 25</p>
+                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
+                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
+                        adipisci error odio voluptate?</p>
+
+                </article>
+                <article>
+                    <hgroup>
+                        <h2 class="titulo">Mascotita de Luis</h2>
+                    </hgroup>
+                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
+                    <p class="fecha">Edad: 25</p> 
+                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
+                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
+                        adipisci error odio voluptate?</p>
+
+                </article>
+                <article>
+                    <hgroup>
+                        <h2 class="titulo">Mascotita de Ana</h2>
+                    </hgroup>
+                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
+                    <p class="fecha">Edad: 25</p> 
+                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
+                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
+                        adipisci error odio voluptate?</p>
+
+                </article>
+
+            </section>
+
 
 
 
