Mi articulo dentro de la pagina principal

--- a/index.html
+++ b/index.html
@@ -83,12 +83,13 @@
                     <hgroup>
                         <h2 class="titulo">Mascotita de Luis</h2>
                     </hgroup>
-                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
-                    <p class="fecha">Edad: 25</p> 
-                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
-                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
-                        adipisci error odio voluptate?</p>
+                    <p class="fecha">Nombre: Choi</p>
+                    <p class="fecha">Nacimiento: Julio del 2016</p>
+                    <p class="fecha">Edad: 5 años</p> 
+                    <img class="thumb" src="media/Imag/Choi2.jpg" alt="descripcion de imagen">
+                    <p>Choi es un perro de color negro y de tamaño mediano que a formado parte de mi familia durante
+                        5 años. es un perro muy activo y jugueton que le encanta correr y salir a pasear minimo 1 hora
+                        aun asi...</p>
 
                 </article>
                 <article>
