Enlace a la pagina choi

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <img class="thumb" src="media/Imag/Choi2.jpg" alt="descripcion de imagen">
                     <p>Choi es un perro de color negro y de tamaño mediano que a formado parte de mi familia durante
                         5 años. es un perro muy activo y jugueton que le encanta correr y salir a pasear minimo 1 hora
-                        aun asi...</p>
+                        aun asi..</p><a href="Choi.html" class="letrac"><p class="letrac">(click para ver mas informacion)</p></a>
 
                 </article>
                 <article>
