Modificacion del index datos ivan, agregada la imagen para mascotas ivan, cracion del documento +cotas

--- a/index.html
+++ b/index.html
@@ -57,14 +57,13 @@
             <section id="contenido">
                 <article>
                     <hgroup>
-                        <h2 class="titulo">Mascotita de Iván</h2>
+                        <h2 class="titulo">Sash a/ Nozomi / Los pericos</h2>
                     </hgroup>
-                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
-                    <p class="fecha">Edad: 25</p>
-                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
-                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
-                        adipisci error odio voluptate?</p>
+                    <p class="fecha">2008 / 2013 / ¿?</p>
+                    <p class="fecha">Edad: 13 / 8 años / ¿?</p>
+                    <img class="thumb" src="media/Imag/colage.png" alt="gatu, perru, perricus">
+                    <p>Un gato negro con un poco de historia en la familia, un perro el cual llego junto con nosotros a la casa "nueva"
+                        y un trio de pericos medio peleoneros </p>
 
                 </article>
                 <article>
