--- a/index.html
+++ b/index.html
@@ -57,8 +57,9 @@
             <section id="contenido">
                 <article>
                     <hgroup>
-                        <a href=""><h2 class="titulo">Sash a/ Nozomi / Los pericos</h2></a>
+                        <a href=""><h2 class="titulo">Mascotita de Iván</h2></a>
                     </hgroup>
+                    <p class="fecha">Nombres: Sasha / Nozomi / Los pericos</p>
                     <p class="fecha">2008 / 2013 / ¿?</p>
                     <p class="fecha">Edad: 13 / 8 años / ¿?</p>
                     <a href=""><img class="thumb" src="media/Imag/colage.png" alt="gatu, perru, perricus"></a>
