--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <section id="contenido">
                 <article>
                     <hgroup>
-                        <a href=""><h2 class="titulo">Mascotita de Iván</h2></a>
+                        <a href=""><h2 class="titulo">Mascotitas de Iván</h2></a>
                     </hgroup>
                     <p class="fecha">Nombres: Sasha / Nozomi / Los pericos</p>
                     <p class="fecha">2008 / 2013 / ¿?</p>
@@ -69,7 +69,7 @@
                 </article>
                 <article>
                     <hgroup>
-                        <a href=""><h2 class="titulo">Mascotita de Victor</h2></a>
+                        <a href=""><h2 class="titulo">Mascotitas de Victor</h2></a>
                     </hgroup>
                     <p class="fecha">Nacimiento: 25 de julio del 2017</p>
                     <p class="fecha">Edad: 25</p>
