--- a/index.html
+++ b/index.html
@@ -95,12 +95,18 @@
                     <hgroup>
                         <h2 class="titulo">Mascotita de Ana</h2>
                     </hgroup>
-                    <p class="fecha">Nacimiento: 25 de julio del 2017</p>
-                    <p class="fecha">Edad: 25</p> 
-                    <img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
-                        ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
-                        adipisci error odio voluptate?</p>
+                    <p class="fecha">Nombre: Pechan (Pepe)</p> 
+                    <p class="fecha">Nacimiento: 12 de septiembre 2015</p>
+                    <p class="fecha">Edad: 6</p> 
+                    <img class="thumb" src="media/Imag/cho7.jpeg" alt="descripcion de imagen">
+                    <p>Es un perro tamaño mediano, es color cafe claro confundible con amarillo,
+                        oficial mente desconocemos su fecha de nacimiento lo adoptamos de la calle posiblemente vivio en 
+                        la calle 1 año mas o menos y a sido parte de la familia por 6 años.<br>
+                        Su nombre oficial es Pechan (referenca a un personaje de Ranma1/2) su apodo es Pepe.
+                        Es un perro flojo parece que durme 24/7 y si no ponemos objetos en los sillones se sube a dormir, 
+                        come lo que se cae de la mesa, se sienta para pedir comida, sabe abrir la puerta 
+                        , es bastante celoso y le gusta que lo cargen.
+                    </p>
 
                 </article>
 
