Icono para +cotas

--- a/+cotas.html
+++ b/+cotas.html
@@ -4,11 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="media/icon/gatu.jpg">
     <title>+acotas</title>
 </head>
 <body>
+    <header>
+        <div id="subheader">
+            <div id="logotipo">
+                <p><a href="index.html">Prueba 1</a></p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html">Blog</a></li>
+                    <li><a href="index.html">Articulos</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
     <table>
-        <div></div>
+        
     </table>
     
 </body>
