--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 
 <body>
+    <!-- Inicio de la seccion general -->
+
     <header>
         <div id="subheader">
             <div id="logotipo">
@@ -26,6 +28,8 @@
             </nav>
         </div>
     </header>
+
+    <!-- Fin de la seccion general -->
 
     <section id="wrap">
         <section id="main">
