--- a/index.html
+++ b/index.html
@@ -61,23 +61,23 @@
             <section id="contenido">
                 <article>
                     <hgroup>
-                        <a href=""><h2 class="titulo">Mascotitas de Iván</h2></a>
+                        <a href="+cotas.html"><h2 class="titulo">Mascotitas de Iván</h2></a>
                     </hgroup>
                     <p class="fecha">Nombres: Sasha / Nozomi / Los pericos</p>
                     <p class="fecha">2008 / 2013 / ¿?</p>
                     <p class="fecha">Edad: 13 / 8 años / ¿?</p>
-                    <a href=""><img class="thumb" src="media/Imag/colage.png" alt="gatu, perru, perricus"></a>
+                    <a href="+cotas.html"><img class="thumb" src="media/Imag/colage.png" alt="gatu, perru, perricus"></a>
                     <p class="simple">Un gato negro con un poco de historia en la familia, un perro el cual llego junto con nosotros a la casa "nueva"
                         y un trio de pericos medio peleoneros </p>
 
                 </article>
                 <article>
                     <hgroup>
-                        <a href=""><h2 class="titulo">Mascotitas de Victor</h2></a>
+                        <a href="mascotas.html"><h2 class="titulo">Mascotitas de Victor</h2></a>
                     </hgroup>
                     <p class="fecha">Nacimiento: 25 de julio del 2017</p>
                     <p class="fecha">Edad: 25</p>
-                    <a href=""><img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen"></a>
+                    <a href="mascotas.html"><img class="thumb" src="media/Imag/Main 1.jpg" alt="descripcion de imagen"></a>
                     <p class="simple">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum dolorum veritatis amet, iusto
                         ipsa doloremque unde quas pariatur cupiditate quis maxime quod dolor ex quisquam quibusdam
                         adipisci error odio voluptate?</p>
