--- a/mascotas.html
+++ b/mascotas.html
@@ -20,7 +20,7 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="index.html">Blog</a></li>
-                    <li><a href="index.html">Contacto</a></li>
+                    <li><a href="index.html">Articulos</a></li>
                 </ul>
 
             </nav>
