modificando el index con mis datos y poniendo mis imagenes

--- a/mascotas.html
+++ b/mascotas.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="media/huellitas.jpg">
-    <link rel="stylesheet" type="text/css" href="estilos/vic.css">
+    <link rel="shortcut icon" href="media/icon/huellitas.jpg">
+    <link rel="stylesheet" type="text/css" href="css/vic.css">
     <title>Las Mascotas de Victor</title>
 </head>
 
@@ -38,7 +38,7 @@
                         </th>
 
                         <td>
-                            <img class="thumb" src="media/marniefrente.jpeg" alt="fotografia de marnie">
+                            <img class="thumb" src="media/Imag/marniefrente.jpeg" alt="fotografia de marnie">
                         </td>
                         <td>
                             <p class="tamañoLetra">Marnie es una perrita french poodle mini toy de 15
@@ -55,7 +55,7 @@
                             </p>
                         </td>
                         <td>
-                            <img class="thumb" src="media/marnieperfil.jpeg" alt="fotografia de marnie">
+                            <img class="thumb" src="media/Imag/marnieperfil.jpeg" alt="fotografia de marnie">
                         </td>
                     </article>
                 </section>
@@ -72,7 +72,7 @@
                         </th>
 
                         <td>
-                            <img class="thumb" src="media/nadjafrente.jpeg" alt="fotografia de nadja">
+                            <img class="thumb" src="media/Imag/nadjafrente.jpeg" alt="fotografia de nadja">
                         </td>
                         <td>
                             <p class="tamañoLetra">Nadja es una perrita pastor aleman de 6
@@ -91,7 +91,7 @@
                                 </p>
                         </td>
                         <td>
-                            <img class="thumb" src="media/nadjadelado.jpeg" alt="fotografia de nadja">
+                            <img class="thumb" src="media/Imag/nadjadelado.jpeg" alt="fotografia de nadja">
                         </td>
                     </article>
                 </section>
@@ -108,7 +108,7 @@
                         </th>
 
                         <td>
-                            <img class="thumb" src="media/lucas.jpeg" alt="fotografia de lucas">
+                            <img class="thumb" src="media/Imag/lucas.jpeg" alt="fotografia de lucas">
                         </td>
                         <td>
                             <p class="tamañoLetra">Lucas es un perrito pastor aleman de 5 
@@ -127,7 +127,7 @@
                                 </p>
                         </td>
                         <td>
-                            <img class="thumb" src="media/lucas2.jpeg" alt="fotografia de lucas">
+                            <img class="thumb" src="media/Imag/lucas2.jpeg" alt="fotografia de lucas">
                         </td>
                     </article>
                 </section>
