--- a/Choi.html
+++ b/Choi.html
@@ -4,9 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="css/estiloschoi.css">
+    <link rel="shortcut icon" href="media/Imag/choi7.png">
+    <title>Choi</title> 
 </head>
-<body>
+<body class="ib"> 
+    <header>
+        <div id="subheader">
+            <div id="logotipo">
+                <p><a href="index.html">Mascotitas</a></p>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html">Blog</a></li>
+                    <li><a href="index.html">Articulos</a></li>
+                </ul>
+
+            </nav>
+        </div>
+    </header>
+
     
 </body>
 </html>
