--- a/index.html
+++ b/index.html
@@ -5,22 +5,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Ikneel">
     <link rel="stylesheet" href="css/estilos.css">
     <link rel="shortcut icon" href="media/icon/Guellita Rosa.jpg">
     <title>El blog del Narco</title>
 </head>
 
-<body>
+<body class="fondo">
     <header>
         <div id="subheader">
             <div id="logotipo">
-                <p><a href="index.html">Mascotitas</a></p>
+                <p><a href="#">Mascotitas</a></p>
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html">Blog</a></li>
-                    <li><a href="index.html">Articulos</a></li>
+                    <li><a href="index.html">Pagina principal</a></li>
+                    <li><a href="index.html">Contacto</a></li>
                 </ul>
 
             </nav>
@@ -88,7 +88,7 @@
                     <p class="fecha">Edad: 5 años</p> 
                     <a href="Choi.html"><img class="thumb" src="media/Imag/Choi2.jpg" alt="descripcion de imagen"></a>
                     <p class="simple">Choi es un perro de color negro y de tamaño mediano que a formado parte de mi familia durante
-                        5 años. es un perro muy activo y jugueton que le encanta correr y salir a pasear minimo 1 hora
+                        5 años. Es un perro muy activo y jugueton que le encanta correr y salir a pasear minimo 1 hora,
                         aun asi...</p>
 
                 </article>
