--- a/Choi.html
+++ b/Choi.html
@@ -16,9 +16,8 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html">Blog</a></li>
-                    <li><a href="index.html">Articulos</a></li>
+                    <li><a href="index.html">Pagina Principal</a></li>
+                    <li><a href="index.html">Contacto</a></li>
                 </ul>
 
             </nav>
