cambios al parrafo de choi

--- a/index.html
+++ b/index.html
@@ -11,13 +11,9 @@
     <title>El blog del Narco</title>
 </head>
 
-<<<<<<< HEAD
-<body class="fondo">
-=======
 <body>
     <!-- Inicio de la seccion general -->
 
->>>>>>> c121f3a1370e717d042e715a190065a25697c02e
     <header>
         <div id="subheader">
             <div id="logotipo">
@@ -25,8 +21,9 @@
             </div>
             <nav>
                 <ul>
-                    <li><a href="index.html">Pagina principal</a></li>
-                    <li><a href="index.html">Contacto</a></li>
+                    <li><a href="index.html">Inicio</a></li>
+                    <li><a href="index.html">Blog</a></li>
+                    <li><a href="index.html">Articulos</a></li>
                 </ul>
 
             </nav>
