--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                     <hgroup>
                         <a href="mascotas.html"><h2 class="titulo">Mascotitas de Victor</h2></a>
                     </hgroup>
-
+                    <p class="fecha">Nombre: Marnie, Nadja y Lucas.</p>
                     <p class="fecha">Nacimiento: 18 de enero del 2006, el 23 de marzo del 2015 y en marzo del 2016.</p>
                     <p class="fecha">Edad: 15, 6 y 5.</p>
                     <a href=""><img class="thumb" src="media/Imag/mascotas de victor.png" alt="descripcion de imagen"></a>
