--- a/mascotas.html
+++ b/mascotas.html
@@ -27,11 +27,11 @@
         </div>
     </header>
     <table align="center" class="tabla">
-        <tr class="tr"> 
+        <tr class="tr">
             <section>
                 <section>
                     <article>
-                        <th  class="h2">
+                        <th class="h2">
                             <hgroup>
                                 <h2> &nbsp; Marnie &nbsp; </h2>
                             </hgroup>
@@ -49,8 +49,9 @@
                                 protector y no duda en ladrar a cualquier perro que piense que es una amenasa para su
                                 dueño,
                                 ella es la reina de la casa y ha estado con nosotros desde que nació.</p>
-                            <p class="tamañoLetra">Ella ha sido mamá en 4 ocaciones y tubo un promedio de 6 cachorros por camada; 
-                                estos cachorros fueron adoptados por conocidos de la familia que sabiamos que les darian 
+                            <p class="tamañoLetra">Ella ha sido mamá en 4 ocaciones y tubo un promedio de 6 cachorros
+                                por camada;
+                                estos cachorros fueron adoptados por conocidos de la familia que sabiamos que les darian
                                 una buena vida, llena de amor, cariño y buenos cuidados.
                             </p>
                         </td>
@@ -61,11 +62,11 @@
                 </section>
             </section>
         </tr>
-        <tr>
+        <tr class="tr">
             <section>
                 <section>
                     <article>
-                        <th  class="h21">
+                        <th class="h21">
                             <hgroup>
                                 <h2>Nadja</h2>
                             </hgroup>
@@ -79,16 +80,18 @@
                                 años de edad, ella nació el 23 de marzo en el año 2015.
                             </p>
                             <p class="tamañoLetra">Es la perrita más linda y mejor portada de la familia,
-                                 aunque tambien tiene un instinto protector, a diferencia de Marnie ella no ladrara tanto
-                                 pero si es necesario ella mordera a cualquiera que piense que es una amenasa para ella o su
+                                aunque tambien tiene un instinto protector, a diferencia de Marnie ella no ladrara tanto
+                                pero si es necesario ella mordera a cualquiera que piense que es una amenasa para ella o
+                                su
                                 dueño,
                                 ella llega a mi vida cuando tenia 2 meses de edad y es la mas juguetona de la casa.</p>
-                                <p class="tamañoLetra">Ella ha sido madre solo una vez, y tubo 8 cachorros, lo malo es que 
-                                    fue un caso anormal nos dijo el veterinario; nunca dio leche y casi no se preocupaba 
-                                    por sus cachorros, cuando vimos esto tuvimos que quitarle a sus cachorros, pero
-                                    no lo hicimos a tiempo, 2 cachorros murieron de frio 2 murieron aplastados y 3 murieron de hambre
-                                    pero con muchos cuidados y esfuerzo logramos que 3 crecieran bien, grandes y fuertes.
-                                </p>
+                            <p class="tamañoLetra">Ella ha sido madre solo una vez, y tubo 8 cachorros, lo malo es que
+                                fue un caso anormal nos dijo el veterinario; nunca dio leche y casi no se preocupaba
+                                por sus cachorros, cuando vimos esto tuvimos que quitarle a sus cachorros, pero
+                                no lo hicimos a tiempo, 2 cachorros murieron de frio 2 murieron aplastados y 3 murieron
+                                de hambre
+                                pero con muchos cuidados y esfuerzo logramos que 3 crecieran bien, grandes y fuertes.
+                            </p>
                         </td>
                         <td>
                             <img class="thumb" src="media/Imag/nadjadelado.jpeg" alt="fotografia de nadja">
@@ -97,7 +100,7 @@
                 </section>
             </section>
         </tr>
-        <tr>
+        <tr class="tr">
             <section>
                 <section>
                     <article>
@@ -111,20 +114,27 @@
                             <img class="thumb" src="media/Imag/lucas.jpeg" alt="fotografia de lucas">
                         </td>
                         <td>
-                            <p class="tamañoLetra">Lucas es un perrito pastor aleman de 5 
+                            <p class="tamañoLetra">Lucas es un perrito pastor aleman de 5
                                 años de edad, el nació en marzo del 2016.
                             </p>
-                            <p class="tamañoLetra">Es el un perrito muy docil y cariñoso, parece muy agresivo ya que le ladrar
-                                a todos los perros que ve, pero esto es porque no conoce a los perros y no sabe si son agresivos
-                                o no, pero en cuanto lo conoces puedes notar que no es agresivo con las personas, si tiene un lado  
+                            <p class="tamañoLetra">Es el un perrito muy docil y cariñoso, parece muy agresivo ya que le
+                                ladrar
+                                a todos los perros que ve, pero esto es porque no conoce a los perros y no sabe si son
+                                agresivos
+                                o no, pero en cuanto lo conoces puedes notar que no es agresivo con las personas, si
+                                tiene un lado
                                 protector pero no es como el de Nadja, es el mas escandaloso de la casa.
                                 <br>
-                                el es algo jugueton y distraido, es muy inquieto y necesita mas atencion que las otras ya que el 
-                                tiene problemas en el corazón y nos ha dado varios sustos.</p>
-                                <p class="tamañoLetra"> Este chiquitin llego a mi vida a la edad de 7 meses, ha sido padre 1 vez,
-                                    se ha desmayado por coraje 2 veces y se ha paralizado 1 vez por comer una planta que no debia,
-                                     pero afortunadamente y gracias a mi veterinaria esta bien. 
-                                </p>
+                                el es algo jugueton y distraido, es muy inquieto y necesita mas atencion que las otras
+                                ya que el
+                                tiene problemas en el corazón y nos ha dado varios sustos.
+                            </p>
+                            <p class="tamañoLetra"> Este chiquitin llego a mi vida a la edad de 7 meses, ha sido padre 1
+                                vez,
+                                se ha desmayado por coraje 2 veces y se ha paralizado 1 vez por comer una planta que no
+                                debia,
+                                pero afortunadamente y gracias a mi veterinaria esta bien.
+                            </p>
                         </td>
                         <td>
                             <img class="thumb" src="media/Imag/lucas2.jpeg" alt="fotografia de lucas">
