--- a/Choi.html
+++ b/Choi.html
@@ -24,6 +24,14 @@
         </div>
     </header>
 
+        <section id="sec1">
+            <section id="sec2" class="colorsec2">
+                <p>criko</p>
+
+            </section>
+        </section>
+
+
     
 </body>
 </html>
