--- a/Choi.html
+++ b/Choi.html
@@ -25,8 +25,29 @@
     </header>
 
         <section id="sec1">
-            <section id="sec2" class="colorsec2">
-                <p>criko</p>
+            <section id="sec2">
+                <section class="sec3">
+                    <article>
+                        <hgroup>
+                            <a href="media/Imag/Choi1.jpg"><img class="tamimg" src="media/Imag/Choi1.jpg" alt="Choi mirando a la nada"></a>
+                            <h2 class="titulos">Choi</h2>
+                            <div class="contenidos">
+                                <p>Choi es un perro de color negro y de tamaño mediano que a formado parte de mi familia durante
+                                    5 años.
+                                </p>
+                                <p>
+                                    Es un perro muy activo y jugueton que le encanta correr y salir a pasear minimo 1 hora,
+                                    aun asi el es un perro muy agresivo cuando se trata de convivir con los de su especie, especialmente con otros perros machos
+                                    ademas de ser muy territorial con gente desconocida que se acerque demasiado a la casa. 
+                                </p>
+                                <p>Esto lamentablemente incluye familiares que no conocio desde que era pequeño. Este comportamiento aunque lo hace muy buen perro guardian es
+                                    triste por que cuando hay visitas tenemos que alejarlo de donde se encuentran dichas visitas.
+
+                                </p>
+                            </div>
+                        </hgroup>
+                    </article>
+                </section>
 
             </section>
         </section>
