mas avances choi

--- a/Choi.html
+++ b/Choi.html
@@ -42,13 +42,26 @@
                                 </p>
                                 <p>Esto lamentablemente incluye familiares que no conocio desde que era pequeño. Este comportamiento aunque lo hace muy buen perro guardian es
                                     triste por que cuando hay visitas tenemos que alejarlo de donde se encuentran dichas visitas.
-
+                                </p>
+                                <p>Aun asi el es muy cariñoso y jugueton con la gente que si conoce.</p>
+                            </div>
+                        </hgroup>
+                    </article>
+                </section>
+                <section class="sec3">
+                    <article>
+                        <hgroup>
+                            <a href="media/Imag/Choi4.jpg"><img class="tamimg1" src="media/Imag/Choi4.jpg" alt="Choi cachorro"></a>
+                            <a href="media/Imag/choi5.jpg"><img class="tamimg2" src="media/Imag/choi5.jpg" alt="Choi cachorro2"></a>
+                            <h2 class="titulos"> De cachorro </h2>
+                            <div class="contenidos">
+                                <p>
+                                    Choi nacio en un terreno cerca de mi casa junto con sus otros 7 hermanos
                                 </p>
                             </div>
                         </hgroup>
                     </article>
                 </section>
-
             </section>
         </section>
 
