--- a/MascorasAna.html
+++ b/MascorasAna.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/Ana.css">
     <link rel="shortcut icon" href="media/icon/Guellita Rosa.jpg">
     <title>Pechan</title>
 </head>
@@ -24,5 +24,21 @@
             </nav>
         </div>
     </header>
+
+    <section id="recuadro">
+        <article>
+            <hgroup>
+                <h2 class="titulo">Pechan</h2></a>
+            </hgroup>
+            <p class="letra">Apodo: Pepe o Quishi </p> 
+            <p class="letra">Nacimiento: 12 septiembre 2015 </p>
+            <p class="letra">Edad: 6 / 2 / 14 </p>
+            <a href=""><img class="thumb" src="media/Imag/Pepe1.jpeg" ></a> 
+            <p class="letra1">Es un perro tamaño mediano, es color amarillo y ha sido parte de la familia por 6 años. Oficialmente desconocemos su fecha de nacimiento porque lo adoptamos de la calle pero posiblemente vivió ahí 1 año aproximadamente.
+                Su nombre oficial es Pechan (en referencia a un personaje de Ranma 1/2)
+            </p>
+
+        </article>
+    </section>
 </body>
 </html>
