--- a/index.html
+++ b/index.html
@@ -130,41 +130,35 @@
             </section>
 
         </section>
-            <aside>
-                <section class="widget" >
-                    <h3>Los perritos: Guero y Chiquis</h3>
-                        <p class="letra2">Son los favoritos de la familia, son hermanos y fueron criados desde chiquitos.
-                            <br>
-                            La de la izquierda es Chiquis y el de la derecha es Guero, son los guardianes de la casa y los mas queridos, 
-                            tienen 7 años de increible felicidad.
-                        </p>
+        <aside>
+            <section class="widget">
+                <h3>Los perritos: Guero y Chiquis</h3>
+                <p class="letra2">Son los favoritos de la familia, son hermanos y fueron criados desde chiquitos.
+                    <br>
+                    La de la izquierda es Chiquis y el de la derecha es Guero, son los guardianes de la casa y los mas
+                    queridos,
+                    tienen 7 años de increible felicidad.
+                </p>
 
-                        <img src="media/Imag/Perros Ima.jpg" class="thumb"  alt="Imagen de las mascotitas de Imanol">
-                        <br>
+                <img src="media/Imag/Perros Ima.jpg" class="thumb" alt="Imagen de las mascotitas de Imanol">
+                <br>
 
-                    <h3>Los pericos: Pedro y Pablo.</h3>
-                    <p class="letra2">Estos dos son los gritones de la familia.
-                        <br>
-                        El pequeño se llama Pablo y el grande es Pedro, aúnque los dos se les ve muy cariñosos y amorosos
-                        a los 10min se pelean, parecen una pareja de casados hahaha.
-                        <br>
-                        Este par de locos fueron rescatados de un vendedor que los tenia casi moribundos por lo que decidimos adoptarlos,
-                        Estos ya llevan como 3 años de puro amor con nosotros.
-                    </p>
-                    <img src="media/Imag/Pericos Ima1.jpg" class="thumb"  alt="Imagen las mascotitas de Imanol">
-                    
-                </section>
-                
-            </aside>
+                <h3>Los pericos: Pedro y Pablo.</h3>
+                <p class="letra2">Estos dos son los gritones de la familia.
+                    <br>
+                    El pequeño se llama Pablo y el grande es Pedro, aúnque los dos se les ve muy cariñosos y amorosos
+                    a los 10min se pelean, parecen una pareja de casados hahaha.
+                    <br>
+                    Este par de locos fueron rescatados de un vendedor que los tenia casi moribundos por lo que
+                    decidimos adoptarlos,
+                    Estos ya llevan como 3 años de puro amor con nosotros.
+                </p>
+                <img src="media/Imag/Pericos Ima1.jpg" class="thumb" alt="Imagen las mascotitas de Imanol">
 
+            </section>
 
-
-
-
-
-
-
-        </section>    
+        </aside>
+    </section>
 
     </section>
     <footer class="pie letra">
