Detalles pagina choi

--- a/Choi.html
+++ b/Choi.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Pagina Principal</a></li>
-                    <li><a href="index.html">Contacto</a></li>
+                    
                 </ul>
 
             </nav>
@@ -56,11 +56,39 @@
                             <h2 class="titulos"> De cachorro </h2>
                             <div class="contenidos">
                                 <p>
-                                    Choi nacio en un terreno cerca de mi casa junto con sus otros 7 hermanos
+                                    Choi nacio en un terreno cerca de mi casa junto con sus otros 7 hermanos, su mama era muy bien portada y muy docil ya que ademas de cuidarlos muy bien, dejaba que 
+                                    las personas se acercaran a sus cachorros y dejarle comida. Ya que la situacion de la perrita era de calle añadiendo que era Julio y por lo tanto temporada de lluvias
+                                    una familia decidio adoptarla a ella y a los cachorros. Luego de 2 meses se nos dijo si queriamos adoptar a uno de los cachorros y el que elegimos fue al mas gordito de la camada.   
+                                </p>
+                                <p>
+                                    Es su primer año el era muy bien portado, hacia del baño donde debia hacer, no mordia nada y ademas de que era muy jugueton con los demas perros.
+                                    Hasta que una vez aproximadamente a su año y medio de vida fue atacado por un perro lastimandolo en una de sus patitas, de ahi ya no quiso jugar con mas perros y como convivia cada vez menos
+                                    con estos se fue haciendo muy agresivo cuando se le hacercaban.
+                                </p>
+                                <p>
+                                    Afortunadamente este comportamiento al ser reprendido se a hecho menos frecuente, aun asi si con personas desconocidas para el su agresividad no a cambiado
                                 </p>
                             </div>
                         </hgroup>
                     </article>
+                </section>
+                <section class="sec3">
+                    <section class="sec4">
+                        <p class="titulos">Choi aunque no sea el perro mas amigable se ha ganado el cariño de toda la familia</p>
+                        <a href="media/Imag/choi8.png"><img class="tamimg3 " src="media/Imag/choi8.png" alt="Choi de Pana"></a>
+                    </section>
+                    <aside>
+                        <section class="widget">
+                            <h3> Choi sonriendo a la camara</h3>
+                            <a href="media/Imag/choi10.png"><img class="tamimg4" src="media/Imag/choi10.png" alt="Choi sonriendo"></a>
+                        </section>
+                        <section class="widget">
+                            <h3> Choi mirandose fijamente en un espejo</h3>
+                            <a href="media/Imag/choi9.png"><img class="tamimg4" src="media/Imag/choi9.png" alt="Choi alterado"></a>
+                        </section>
+                       
+                    </aside>
+
                 </section>
             </section>
         </section>
