--- a/Choi.html
+++ b/Choi.html
@@ -92,6 +92,31 @@
                 </section>
             </section>
         </section>
+        <footer class="pie letra">
+            <section id="redes-s">
+                <h3 class="h3">Autores:</h3>
+                <div class="Repositorio"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya</a></div>
+                <div class="Repositorio"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez</a></div>
+                <div class="Repositorio"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves</a></div>
+                <div class="Repositorio"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia</a></div>
+                <div class="Repositorio"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez</a></div>
+            </section>
+            <section id="profe">
+                <h3 class="h3">Profesor:</h3>
+                <div class="Repositorio"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin</a></div>
+            </section>
+    
+            <section id="derechos">
+                <article>
+                    <hgroup>
+                        <p>Todos los derechos reservados. Queda prohibida la reproducción,
+                            el almacenamiento en memoria electrónica o la transmisión por cualquier medio electrónico,
+                            mecánico, de fotocopiado, grabación, etc.,
+                            de la totalidad o parte de esta publicación sin consentimiento de los autores.</p>
+                    </hgroup>
+                </article>
+            </section>
+        </footer>
 
 
     
