--- a/+cotas.html
+++ b/+cotas.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/estilos.css">
+    <link rel="stylesheet" href="css/kara.css">
     <link rel="shortcut icon" href="media/icon/gatu.jpg">
     <title>+acotas</title>
 </head>
@@ -25,8 +25,8 @@
             </nav>
         </div>
     </header>
-
-    <table align="center">
+    <table>
+    <table class="tabla1" >
         <td align="left">
             <h1 align="center">Sasha</h1>
             <h1>Dueño: Ivan</h1>
@@ -35,15 +35,17 @@
                 agosto. Desde entonces ah estado con nosotros.</p>
             <p>
                 De todas las cosas que le sucedieron, la que mas nos duele y a la vez nos hizo tomarle mas cariño fue
-                cuando desaparecio por un mes completo y regreso muy delgada a comparacion de como se havia ido
+                cuando desaparecio por un mes completo y regreso muy delgada a comparacion de como se habia ido
                 Con el paso del tiempo su temperamento cambio mucho, de ser enojona y agresiva al principio, a ser mas
                 docil y tranquila actualmente.
 
             </p>
+            <img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
            
         </td>
-
-        <td align="right">
+    </table>
+    <table class="tabla2" >
+        <td >
             <h1 align="center">Nozomi</h1>
             <h1>Dueño: Yahir</h1>
             <p>Nozomi es un perro color "humo" de 8 años aprox, cruza de schnauzer y su madre sabra de que mas</p>
@@ -55,12 +57,15 @@
             <p> Un perro muy cariñoso pero tambien muy celoso, no puedes andar con otra mascota porque va corriendo a
                 donde estas y se tira al sualo para pedir cariño, a pesar de todo se le quiere y se le cuida a la par
                 que el gato</p>
+                <img class="thumb" src="media/Imag/sadogo.jpg" alt="Doggo seantao">
         </td>
+        
 
     </table>
-    <table align="center">
-        <td align="center">
-            <h1>Los pericus</h1>
+</table>
+    <table class="tabla3">
+        <td>
+            <h1 align="center">Los pericus</h1>
             <h1>Dueño: todavia por definir, pero quien mas los esta cuidando soy io Ivan</h1>
             <p>Popelle, Ñañito y Ñañita, los nombres que le dio su anterior dueño.Periquitos atoleros</p>
             <p>Recien llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podria
@@ -70,6 +75,7 @@
             <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacia ni callada, lo cual alegra a
                 todos,a sasha parecen disgustarle del todo, pero Nozomi parece que los ve mas como una especie de bocado
                 volador</p>
+                <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
         </td>
     </table>
     <footer class="pie letra">
