--- a/+cotas.html
+++ b/+cotas.html
@@ -26,56 +26,55 @@
         </div>
     </header>
     <table>
-    <table class="tabla1" >
-        <td align="left">
-            <h1 align="center">Sasha</h1>
-            <h1>Dueño: Ivan</h1>
-            <p>Saha es un gato negro de ojos verdes con una edad aproximada de 13 años. </p>
-            <p>Encontrada entre paredes de casas distintas, la escuchamos maullar debilmente una noche a finales de
-                agosto. Desde entonces ah estado con nosotros.</p>
-            <p>
-                De todas las cosas que le sucedieron, la que mas nos duele y a la vez nos hizo tomarle mas cariño fue
-                cuando desaparecio por un mes completo y regreso muy delgada a comparacion de como se habia ido
-                Con el paso del tiempo su temperamento cambio mucho, de ser enojona y agresiva al principio, a ser mas
-                docil y tranquila actualmente.
+        <table class="tabla1">
+            <td align="left">
+                <h1 align="center">Sasha</h1>
+                <h1>Dueño: Ivan</h1>
+                <p>Saha es un gato negro de ojos verdes con una edad aproximada de 13 años. </p>
+                <p>Encontrada entre paredes de casas distintas, la escuchamos maullar débilmente una noche a finales de
+                    agosto. Desde entonces ha estado con nosotros.</p>
+                <p>
+                    De todas las cosas que le sucedieron, la que más nos duele y a la vez nos hizo tomarle más cariño
+                    fue cuando desapareció por un mes completo y regreso muy delgada a comparación de como se había ido
+                    Con el paso del tiempo su temperamento cambio mucho, de ser enojona y agresiva al principio, a ser
+                    más dócil y tranquila actualmente.
 
-            </p>
-            <img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
-           
-        </td>
-    </table>
-    <table class="tabla2" >
-        <td >
-            <h1 align="center">Nozomi</h1>
-            <h1>Dueño: Yahir</h1>
-            <p>Nozomi es un perro color "humo" de 8 años aprox, cruza de schnauzer y su madre sabra de que mas</p>
-            <p>Nozomi fue peculiar desde que lo adoptamos, se lo regalaron a mi hermano en una ocacion que andaba por
-                coyoacan, el ultimo de sus hermanitos.
-                Nozomi significa esperanza, pero se le puso ese nombre por una confusion de significados y al final se
-                le quedo.
-            </p>
-            <p> Un perro muy cariñoso pero tambien muy celoso, no puedes andar con otra mascota porque va corriendo a
-                donde estas y se tira al sualo para pedir cariño, a pesar de todo se le quiere y se le cuida a la par
-                que el gato</p>
+                </p>
+                <img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
+
+            </td>
+        </table>
+        <table class="tabla2">
+            <td>
+                <h1 align="center">Nozomi</h1>
+                <h1>Dueño: Yahir</h1>
+                <p>Nozomi es un perro color "humo" de 8 años aproximadamente, cruza de schnauzer.</p>
+                <p>Nozomi fue peculiar desde que lo adoptamos, se lo regalaron a mi hermano en una ocasión que andaba
+                    por Coyoacán, el ultimo de sus hermanitos. Nozomi significa esperanza, pero se le puso ese nombre
+                    por una confusión de significados y al final se le quedo.
+                </p>
+                <p> Un perro muy cariñoso, pero tambien muy celoso, no puedes andar con otra mascota porque va corriendo
+                    a donde estas y se tira al suelo para pedir cariño, a pesar de todo se le quiere y se le cuida a la
+                    par que el gato</p>
                 <img class="thumb" src="media/Imag/sadogo.jpg" alt="Doggo seantao">
-        </td>
-        
+            </td>
 
+
+        </table>
     </table>
-</table>
     <table class="tabla3">
         <td>
             <h1 align="center">Los pericus</h1>
-            <h1>Dueño: todavia por definir, pero quien mas los esta cuidando soy io Ivan</h1>
-            <p>Popelle, Ñañito y Ñañita, los nombres que le dio su anterior dueño.Periquitos atoleros</p>
-            <p>Recien llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podria
-                prestarles tanta atencion como antes</p>
-            <p>A pesar de tener poco tiempo mi madre ya les tomo mucho cariño pues queria periquitos. Se estan adaptando
+            <h1>Dueño: todavía por definir</h1>
+            <p>Popeye, Ñañito y Ñañita, los nombres que le dio su anterior dueño. Periquitos atoleros</p>
+            <p>Recién llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podría
+                prestarles tanta atención como antes</p>
+            <p>A pesar de tener poco tiempo mi madre ya les tomo mucho cariño pues quería periquitos. Se están adaptando
                 apenas a la casa, al igual que al clima</p>
-            <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacia ni callada, lo cual alegra a
-                todos,a sasha parecen disgustarle del todo, pero Nozomi parece que los ve mas como una especie de bocado
-                volador</p>
-                <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
+            <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacía ni callada, lo cual alegra a
+                todos, a Sasha parecen disgustarle del todo, pero Nozomi parece que los ve más como una especie de
+                bocado volador.</p>
+            <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
         </td>
     </table>
     <footer class="pie letra">
