--- a/MascorasAna.html
+++ b/MascorasAna.html
@@ -28,7 +28,7 @@
     <section id="recuadro">
         <article>
             <hgroup>
-                <h2 class="titulo">Pechan</h2></a>
+                <h2 class="titulo"> < Pechan > </Pechan></h2></a>
             </hgroup>
             <p class="letra">Apodo: Pepe o Quishi </p> 
             <p class="letra">Nacimiento: 12-septiembre-2015 </p>
@@ -51,7 +51,7 @@
 
         <article>
             <hgroup>
-                <h2 class="titulo">Coki</h2></a>
+                <h2 class="titulo"> < Coki >  </h2></a>
             </hgroup>
             <p class="letra">Apodo: Coco </p> 
             <p class="letra">Nacimiento: 21-abril-2019 </p>
@@ -80,7 +80,7 @@
 
         <article>
             <hgroup>
-                <h2 class="titulo">Tuga</h2></a>
+                <h2 class="titulo"> < Tuga > </Tuga></h2></a>
             </hgroup>
             <p class="letra">Apodo: La condenada </p> 
             <p class="letra">Nacimiento: ¿?-¿?-2007 </p>
@@ -104,5 +104,32 @@
             </p>
         </article>
     </section>
+
+    <footer class="pie letra">
+        <section id="redes-s">
+            <h3 class="h3">Autores:</h3>
+            <div class="Repositorio"> <a href="https://github.com/imanol-um">Ian Imanol Uribe Montoya</a></div>
+            <div class="Repositorio"> <a href="https://github.com/victordelangelss">Victor del Angel Sánchez Sánchez</a></div>
+            <div class="Repositorio"> <a href="https://github.com/ikneel">Luis Enrique Espitia Naves</a></div>
+            <div class="Repositorio"> <a href="https://github.com/AnaKR10">Ana Karen Reyes Cicilia</a></div>
+            <div class="Repositorio"> <a href="https://github.com/AlexKarashi">Iván Alexander Ramirez Martinez</a></div>
+        </section>
+        <section id="profe">
+            <h3 class="h3">Profesor:</h3>
+            <div class="Repositorio"> <a href="https://github.com/AaronVelasco93">Aaron Velasco Agustin</a></div>
+        </section>
+
+        <section id="derechos">
+            <article>
+                <hgroup>
+                    <p>Todos los derechos reservados. Queda prohibida la reproducción,
+                        el almacenamiento en memoria electrónica o la transmisión por cualquier medio electrónico,
+                        mecánico, de fotocopiado, grabación, etc.,
+                        de la totalidad o parte de esta publicación sin consentimiento de los autores.</p>
+                </hgroup>
+            </article>
+        </section>
+    </footer>
+
 </body>
 </html>
