Cambio de colores e +cotas

--- a/+cotas.html
+++ b/+cotas.html
@@ -27,7 +27,8 @@
     </header>
     <table>
         <table class="tabla1">
-            <td align="left">
+            <td><img class="thumb" src="media/Imag/Gatodona1.jpg" alt="Gato acostado en forma de dona"></td>
+            <td  >
                 <h1 align="center">Sasha</h1>
                 <h1>Dueño: Ivan</h1>
                 <p>Saha es un gato negro de ojos verdes con una edad aproximada de 13 años. </p>
@@ -40,8 +41,9 @@
                     más dócil y tranquila actualmente.
 
                 </p>
-                <img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
-
+                <td><img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
+                
+            </td>
             </td>
         </table>
         <table class="tabla2">
@@ -64,7 +66,7 @@
     </table>
     <table class="tabla3">
         <td>
-            <h1 align="center">Los pericus</h1>
+            <h1 align="center">Los pericos</h1>
             <h1>Dueño: todavía por definir</h1>
             <p>Popeye, Ñañito y Ñañita, los nombres que le dio su anterior dueño. Periquitos atoleros</p>
             <p>Recién llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podría
