Estilizacion de la pagina

--- a/+cotas.html
+++ b/+cotas.html
@@ -25,10 +25,12 @@
             </nav>
         </div>
     </header>
+
     <table>
+        <tr>.</tr>
         <table class="tabla1">
             <td><img class="thumb" src="media/Imag/Gatodona1.jpg" alt="Gato acostado en forma de dona"></td>
-            <td  >
+            <td>
                 <h1 align="center">Sasha</h1>
                 <h1>Dueño: Ivan</h1>
                 <p>Saha es un gato negro de ojos verdes con una edad aproximada de 13 años. </p>
@@ -41,11 +43,12 @@
                     más dócil y tranquila actualmente.
 
                 </p>
-                <td><img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
-                
+            <td><img class="thumb" src="media/Imag/gatuconcentracion.jpg" alt="gatu concetrado en juzgarte">
+
             </td>
             </td>
         </table>
+        <tr>.</tr>
         <table class="tabla2">
             <td>
                 <h1 align="center">Nozomi</h1>
@@ -60,24 +63,27 @@
                     par que el gato</p>
                 <img class="thumb" src="media/Imag/sadogo.jpg" alt="Doggo seantao">
             </td>
-
+ 
 
         </table>
-    </table>
-    <table class="tabla3">
-        <td>
-            <h1 align="center">Los pericos</h1>
-            <h1>Dueño: todavía por definir</h1>
-            <p>Popeye, Ñañito y Ñañita, los nombres que le dio su anterior dueño. Periquitos atoleros</p>
-            <p>Recién llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podría
-                prestarles tanta atención como antes</p>
-            <p>A pesar de tener poco tiempo mi madre ya les tomo mucho cariño pues quería periquitos. Se están adaptando
-                apenas a la casa, al igual que al clima</p>
-            <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacía ni callada, lo cual alegra a
-                todos, a Sasha parecen disgustarle del todo, pero Nozomi parece que los ve más como una especie de
-                bocado volador.</p>
-            <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
-        </td>
+        <tr>.</tr>
+
+        <table class="tabla3">
+            <td>
+                <h1 align="center">Los pericos</h1>
+                <h1>Dueño: todavía por definir</h1>
+                <p>Popeye, Ñañito y Ñañita, los nombres que le dio su anterior dueño. Periquitos atoleros</p>
+                <p>Recién llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podría
+                    prestarles tanta atención como antes</p>
+                <p>A pesar de tener poco tiempo mi madre ya les tomo mucho cariño pues quería periquitos. Se están
+                    adaptando
+                    apenas a la casa, al igual que al clima</p>
+                <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacía ni callada, lo cual alegra a
+                    todos, a Sasha parecen disgustarle del todo, pero Nozomi parece que los ve más como una especie de
+                    bocado volador.</p>
+                <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
+            </td>
+        </table>
     </table>
     <footer class="pie letra">
         <section id="redes-s">
