--- a/index.html
+++ b/index.html
@@ -119,10 +119,9 @@
                     <p class="fecha">Nacimiento: 2015 / 2019 / 2007 </p>
                     <p class="fecha">Edad: 6 / 2 / 14 </p>
                     <a href=""><img class="thumb" src="media/Imag/MascotasAna.jpeg" alt="Pechan, Coki y Tuga"></a>
-                    <p class="simple">Pechan es un perro tamaño mediano, es color cafe claro confundible con
-                        amarillo.<br>
+                    <p class="simple">Pechan es un perro tamaño mediano y color amarillo.<br>
                         Coki es una chihuahua color cafe oscuro es la consentida de la familia.<br>
-                        Tuga es una tortuga comprada en Xochimilco.
+                        Tuga es una tortuga de rio comprada legalmente en Xochimilco.
                     </p>
 
                 </article>
