--- a/MascorasAna.html
+++ b/MascorasAna.html
@@ -18,7 +18,6 @@
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
                     <li><a href="index.html">Blog</a></li>
-                    <li><a href="index.html">Articulos</a></li>
                 </ul>
 
             </nav>
@@ -30,20 +29,20 @@
             <hgroup>
                 <h2 class="titulo"> < Pechan > </Pechan></h2></a>
             </hgroup>
-            <p class="letra">Apodo: Pepe o Quishi </p> 
+            <p class="letra">Apodo: Pepe o El quichi </p> 
             <p class="letra">Nacimiento: 12-septiembre-2015 </p>
-            <p class="letra">Edad: 6 </p>
+            <p class="letra">Edad: 6 años</p>
             <a href=""><img class="thumb" src="media/Imag/Pepe1.jpeg" ></a> 
             <p class="letra2">Su nombre oficial es Pechan (en referencia a un personaje de Ranma 1/2). <br>
                 Es un perro tamaño mediano, es color amarillo y ha sido parte de la 
                 familia por 6 años. Oficialmente desconocemos su fecha de nacimiento porque lo 
-                adoptamos de la calle pero posiblemente vivió ahí 1 año aproximadamente. <br>
+                adoptamos de la calle pero posiblemente vivió ahí 1 año. <br>
                 <br>
                 <img class="thumb2" src="media/Imag/Pepe3.jpeg"> 
                 <br>
-                Le gusta dormir en el sol, cerca de alguno de nosotros o en el sillon; es listo sabe abrir
-                la puerta, se sienta para pedir comida y sabe hacer del baño en el patio; tiene miedo a los
-                cuetes y se esconde cuando los ecucha; es muy tierno y le encanta que lo apapachen. <br>
+                Le gusta dormir en el sol, cerca de alguno de nosotros o en el sillón; es listo, sabe abrir
+                la puerta, se sienta para pedir comida y sabe hacer del baño en el patio. <br> Le tiene miedo a los
+                cuetes y se esconde cuando los ecucha. Es muy tierno y le encanta que lo apapachen. <br>
 
             </p>
 
@@ -55,20 +54,20 @@
             </hgroup>
             <p class="letra">Apodo: Coco </p> 
             <p class="letra">Nacimiento: 21-abril-2019 </p>
-            <p class="letra">Edad: 2 </p>
+            <p class="letra">Edad: 2 años</p>
             <a href=""><img class="thumb" src="media/Imag/coki1.jpeg" ></a> 
-            <p class="letra2">El apodo de Coco se origino como una alteración de su 
-                nombre. <br>
-                Es un perro chihuahua cabeza de venado es color cafe con el pecho blanco.
-                Llego a la casa con una semana de nacida como regalo de un vecino, como es pequeña 
-                y facil de cargar es la consentida de la casa; tiene muchos apodos pero solo uno es 
-                relevante; lleva con nosotros dos años. 
+            <p class="letra2">Es un perro chihuahua cabeza de venado color cafe con el pecho blanco 
+                y apesar de tener muchos apodos solo uno es relevante. <br>
+                Llego a la casa con una semana de nacida como regalo de un vecino, al ser pequeña 
+                y facil de cargar se convirtio en la consentida de la casa. <br>
+                Lleva con nosotros dos años. 
                 <br>
                 <img class="thumb2" src="media/Imag/coki2.jpeg" >
                 <br>
-                Le encanta dormir en el sol junto con Pepe y que la cargen; en invierno y otoño siempre 
-                lleva sueteres hechos en casa;no le gusta que la despierten cuando duerme, que se 
-                acerquen cuando come, que la dejen sola y es bastante inquieta cuando la bañan. <br>
+                Le encanta dormir en el sol junto con Pepe y no le gusta que la despierten cuando duerme.
+                Tampoco le gusta que se acerquen cuando come, que la dejen sola y es bastante inquieta 
+                cuando la bañan. <br>
+                En invierno y otoño siempre la verás con sueteres hechos en casa. <br>
                 <br>
                 
             </p>
@@ -82,23 +81,22 @@
             </hgroup>
             <p class="letra">Apodo: La condenada </p> 
             <p class="letra">Nacimiento: ¿?-¿?-2007 </p>
-            <p class="letra">Edad: 14 </p>
+            <p class="letra">Edad: 14 años</p>
             <a href=""><img class="thumb" src="media/Imag/Tuga1.jpeg" ></a> 
-            <p class="letra2">Su apodo es porque si no le doy su comida dentro de su horario me 
-                muerde y por correr y arñar cuando le toca baño. <br>
-                Es una tortuga de rio oreja amarilla, fue comprada en Xochimilco por 
-                una prima y aproximadamente un año despues llego a mi familia; mide aproximadamente
-                18 cm; le gusta tomar el sol y esconderse; solo come una marca y un tipo de alimento 
-                si no es ese no come; desconocemos si es hembra o macho.
+            <p class="letra2">Su apodo se lo gano, porque si no le doy su comida dentro de su horario me 
+                muerde; además araña e intenta escaparse cuando le toca baño. <br>
+                Fue comprada en Xochimilco por una prima y aproximadamente un año despues llego a mi familia. <br>
+                Es una tortuga de rio oreja amarilla y mide aproximadamente 18 cm. <br>
+                Le gusta tomar el sol y esconderse; solo come una marca y un 
+                tipo de alimento si no es ese no come. Desconocemos si es hembra o macho.
                 <br>
                 <img class="thumb2" src="media/Imag/Tuga2.jpeg" >
                 <br>
                 Tuga es considerada una sobreviviente, por haber caido dos veces de un segundo piso
-                en intentos de fuga y por fugarse por aproximadamente 3 años para ser encontrada 
-                detras de un sillon (hasta el día de hoy se desconoce como sobrevivio); le gusta que
-                le rasquen el caprazón, su alimento en forma de chochitos y la lechuga; no le gustan 
-                los camarones chiquitos, el alimento en forma de bolita y que la cargen; asusta a Coki 
-                cuando sale corriendo.
+                en intentos de fuga; no solo eso ya que hace 3 años escapo y fue encontrada 
+                detras de un sillón. Hasta el día de hoy se desconoce como se como se mantuvo con vida
+                durante el medio año que estuvo desaparecida. <br>
+                Le gusta que le rasquen el caprazón pero detesta que la cargen.
 
             </p>
         </article>
