Complementos pagina choi

--- a/Choi.html
+++ b/Choi.html
@@ -74,7 +74,7 @@
                 </section>
                 <section class="sec3">
                     <section class="sec4">
-                        <p class="titulos">Choi aunque no sea el perro mas amigable se ha ganado el cariño de toda la familia</p>
+                        <p class="titulos">Choi aunque no sea el perro mas amigable, se ha ganado el cariño de toda la familia</p>
                         <a href="media/Imag/choi8.png"><img class="tamimg3 " src="media/Imag/choi8.png" alt="Choi de Pana"></a>
                     </section>
                     <aside>
