retoques finales pagina

--- a/+cotas.html
+++ b/+cotas.html
@@ -19,7 +19,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Inicio</a></li>
-                    <li><a href="index.html">Repositorio</a></li>
+                    <li><a href="https://github.com/imanol-um/Proyecto_Programacion_Web_1">Repositorio</a></li>
                 </ul>
 
             </nav>
@@ -28,11 +28,11 @@
 
     <table>
         <tr>.</tr>
-        <table class="tabla1">
+        <table class="tabla1 texto">
             <td><img class="thumb" src="media/Imag/Gatodona1.jpg" alt="Gato acostado en forma de dona"></td>
             <td>
-                <h1 align="center">Sasha</h1>
-                <h1>Dueño: Ivan</h1>
+                <h1 align="center" class="tit">Sasha</h1>
+                <h1 class="tit1">Dueño: Ivan</h1>
                 <p>Saha es un gato negro de ojos verdes con una edad aproximada de 13 años. </p>
                 <p>Encontrada entre paredes de casas distintas, la escuchamos maullar débilmente una noche a finales de
                     agosto. Desde entonces ha estado con nosotros.</p>
@@ -49,10 +49,11 @@
             </td>
         </table>
         <tr>.</tr>
-        <table class="tabla2">
+        <table class="tabla2 texto1">
             <td>
-                <h1 align="center">Nozomi</h1>
-                <h1>Dueño: Yahir</h1>
+            <td>
+                <h1 align="center" class="tit">Nozomi</h1>
+                <h1 class="tit1">Dueño: Yahir</h1>
                 <p>Nozomi es un perro color "humo" de 8 años aproximadamente, cruza de schnauzer.</p>
                 <p>Nozomi fue peculiar desde que lo adoptamos, se lo regalaron a mi hermano en una ocasión que andaba
                     por Coyoacán, el ultimo de sus hermanitos. Nozomi significa esperanza, pero se le puso ese nombre
@@ -61,17 +62,19 @@
                 <p> Un perro muy cariñoso, pero tambien muy celoso, no puedes andar con otra mascota porque va corriendo
                     a donde estas y se tira al suelo para pedir cariño, a pesar de todo se le quiere y se le cuida a la
                     par que el gato</p>
-                <img class="thumb" src="media/Imag/sadogo.jpg" alt="Doggo seantao">
             </td>
- 
+            <td align="left"><img class="thumb" src="media/Imag/sadogo.jpg" alt="Doggo seantado"></td>
+            <td> <img class="thumb" src="media/Imag/dogoalsuelo.jpeg" alt="doggo acostado"></td>
+            </td>
+
 
         </table>
         <tr>.</tr>
 
-        <table class="tabla3">
+        <table class="tabla3 texto2">
             <td>
-                <h1 align="center">Los pericos</h1>
-                <h1>Dueño: todavía por definir</h1>
+                <h1 align="center" class="tit">Los pericos</h1>
+                <h1 class="tit1">Dueño: todavía por definir</h1>
                 <p>Popeye, Ñañito y Ñañita, los nombres que le dio su anterior dueño. Periquitos atoleros</p>
                 <p>Recién llegados, su anterior dueño nos los dejo porque debido a su estilo de vida, ya no podría
                     prestarles tanta atención como antes</p>
@@ -81,7 +84,10 @@
                 <p>Son bastante gritones, pero ayudan a que la casa no se sienta ni vacía ni callada, lo cual alegra a
                     todos, a Sasha parecen disgustarle del todo, pero Nozomi parece que los ve más como una especie de
                     bocado volador.</p>
-                <img class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
+            <td><img align="center" class="thumb" src="media/Imag/trifectu.jpg" alt="pericos en primer plano">
+                <img align="center" class="thumb" src="media/Imag/triodlocos.jpeg"
+                    alt="3 pericos juntos sobre la ventana">
+            </td>
             </td>
         </table>
     </table>
